# imgtabdet

./: .gitmodules  CMakeLists.txt  README.md  imgio_magick.h  imgtabdet.cpp  mem.cpp
lib2/: imgio_magick.c  imgio_magick.h  imgproc_cv.cpp  imgproc_cv.h  iomat.c  iomat.h  log.c  log.h  mem.c  mem.h  memsh.c  memsh.h  memshno.h
tools/imgtabdet/: CMakeLists.txt  imgtabdet.cpp
